--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<img src="https://i.pinimg.com/originals/66/67/79/666779965da3e0ff6c155e050212049b.jpg" alt="lemon pic" class="img_banner border_img">
 		<div id="temp_down">
 			<p id="para_1"class="font">
-				Welcome to our lemon shop, we are currently under maintainanence as you can see, but we'll soon set our shop beautifully.</p>
+				Welcome to the lemon shop, we are currently under maintainanence as you can see, but we'll soon set our shop .</p>
 		</div>
 
 		<p class="font">
@@ -95,17 +95,17 @@
 			<form id="buyer_form"action="#">
 				<label for="indian lemon"class="options">
 					<input id="indian lemon" type="checkbox" name="lemon">
-					INDIAN LEMONS (sourced from the foothills of himalayas)
+					INDIAN LEMONS 
 				</label><br>
 
 				<label for="italian lemons" class="options">
 					<input id="italian lemons" type="checkbox" name="lemon">
-					ITALIAN LEMONS (for meditteranean dishes)
+					ITALIAN LEMONS 
 				</label><br>
 
 				<label for="argentian lemons"class="options">
 					<input id="argentian lemons" type="checkbox" name="lemon">
-					ARGENTINIAN LEMONS (to feel the mountain breezes)
+					ARGENTINIAN LEMONS 
 				</label><br>
 
 				<p style="font-family: monospace;font-size: 23px;"> Enter your address here </p>
@@ -123,7 +123,7 @@
 		<footer style="font-size:19px;font-family:monospace;color:brown;">
 
 		<br><br><br><br>
-		BE FRESH LIKE THE ZEST, A PRODUCT OF ORGANIC_FARMS ™.
+		 A PRODUCT OF ORGANIC_FARMS ™.
 
 		</footer>
 
