Image added check

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Dumb poem</title>
+	<title>WISE WORDS</title>
 </head>
 
 <body>
@@ -27,6 +27,7 @@ Never gonna make you cry<br>
 Never gonna say goodbye<br>
 Never gonna tell a lie and hurt you<br>
 
+<img src="neo-kubuntu.github.io/resources/images.jpeg">
 	</p>
 </body>
 
