Image check again

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1> I forgot all the basics of HTML and CSS </h1>
 	<p> Now,<br> I need to...<br> Relearn all...<br></p>
 
-	<h1>Here's a poem</h1>
+	<h2>Here's a poem</h2>
 	<p>
 		We're no strangers to love <br>
 You know the rules and so do I<br>
@@ -27,7 +27,9 @@ Never gonna make you cry<br>
 Never gonna say goodbye<br>
 Never gonna tell a lie and hurt you<br>
 
-<img src="neo-kubuntu.github.io/resources/images.jpeg">
+<footer>This is the foooooooooooooooooooooooooooter</footer>
+
+<img src="file::/neo-kubuntu.github.io/resources/images.jpeg">
 	</p>
 </body>
 
