--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE HTML>
- 
-
 <html>
-
 <head>
 	<title>WISE WORDS</title>
 </head>
-
 <body>
 	
-	<h1> I forgot all the basics of HTML and CSS </h1>
-	<p> Now,<br> I need to...<br> Relearn all...<br></p>
+	<h1> I forgot the basics of HTML and CSS </h1>
+	<h2> Now,</h2><h3> I need to,</h3><h4>Relearn all...  :(</h4><br></p>
 
-	<h2>Here's a poem</h2>
+	<h2>Here's a poem to cheer up</h2>
 	<p>
 		We're no strangers to love <br>
 You know the rules and so do I<br>
@@ -25,21 +21,13 @@ Never gonna let you down<br>
 Never gonna run around and desert you<br>
 Never gonna make you cry<br>
 Never gonna say goodbye<br>
-Never gonna tell a lie and hurt you<br>
+Never gonna tell a lie and hurt you<br><br>
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Full poem </a>
 
-<footer>This is the foooooooooooooooooooooooooooter</footer>
-
-<img src="file::/neo-kubuntu.github.io/resources/images.jpeg">
+	<img src="http://img.picturequotes.com/2/44/43212/things-rick-astley-will-never-do-quote-1.jpg">
+	
 	</p>
+
+<footer>Will you vote for rick astley?</footer>
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
